--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 本研究收集 Netflix 台灣及韓國兩地區 2020 年 8 月 20 日至 2022 年 4 月 17 日的每週 Top 10 榜單。同時，輔以 TMDB 提供的 API，獲取了劇集出品地區、觀看時長、評分及韓劇中文名稱等數據。
               </li>
               <li>
-                Dcard 文本分析係藉由 API 將相關數據載下，文本源自 Dcard Netflix 版及戲劇綜藝版，再藉由 TF-IDF 分析出不同劇的特殊詞彙。
+                Dcard 文本分析係藉由 API 將相關數據載下，文本源自 Dcard Netflix 版及戲劇綜藝版，再藉由詞頻分析出不同劇的特殊詞彙。
               </li>
             </ul>
 
