--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="key_raw/key_raw.004.png" type="image/x-icon" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -11,6 +10,15 @@
     <link rel="stylesheet" href="css/marker.css">
     <meta name=”description” content="韓劇成為串流影音平台的「必爭之地」" />
     <title>韓流來襲 宅經濟下台灣觀眾 Netflix 觀劇全解析</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1EN1YS6CM2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1EN1YS6CM2');
+</script>
 </head>
 <body>
     <div class="netflix-long"></div>
