--- a/advanced.html
+++ b/advanced.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/marker.css">
     <meta name=”description” content="韓劇成為串流影音平台的「必爭之地」" />
+    <meta property="og:title" content="韓流來襲 宅經濟下台灣觀眾 Netflix 觀劇全解析 - 更多韓劇分析圖表" >
+    <meta property="og:url" content="https://alan000322.github.io/KoreaDrama-TaiwanNetflixAnalysis/advanced.html">
+    <meta property="og:image" content="./img/og.png">
+    <meta property="og:description" content="更多 Netflix 韓劇分析圖表" >
     <title>韓流來襲 宅經濟下台灣觀眾 Netflix 觀劇全解析 - 更多韓劇分析圖表</title>
 </head>
 <body class="bg-gray">
